# lettuc

./: README.md  説明書
auto_open_close/: package.xml  setup.py
auto_open_close/auto_open_close/: open_close_demo_subscriber.py
camera_test/: package.xml  setup.cfg  setup.py
camera_test/camera_test/: camera_test_node.py
lettuce/: CMakeLists.txt  package.xml
lettuce/src/: lettuce.cpp
lettuce_harvest/: 説明書(利根川)
lettuce_harvest/auto_open_close/: setup.cfg  setup.py
lettuce_harvest/auto_open_close/auto_open_close/: open_close_demo_publisher.py  open_close_node.py  open_close_test_publish.py  publish_for_arm.py  publish_for_harvest.py
lettuce_harvest/harvest_studio/: CMakeLists.txt  package.xml
lettuce_harvest/harvest_studio/launch/: activate_harvest_system.xml  check_camera_operation.xml  check_main_harvest_operation.xml  check_op_without_camera.xml  set_origin_impro.xml  set_origin_test_with_camera.xml
lettuce_harvest/main_harvest/: CMakeLists.txt  package.xml
lettuce_harvest/main_harvest/src/: main_harvest_node.cpp
lettuce_harvest/marker_detection/: package.xml  setup.py
lettuce_harvest/marker_detection/marker_detection/: ar_marker_node.py  marker_detection_node.py  marker_detection_test.py  operation_inst_node.py  qr_code_detection_node.py
lettuce_harvest/marker_detection_msg/: CMakeLists.txt  package.xml
lettuce_harvest/marker_detection_msg/msg/: MarkerCoordinates.msg
lettuce_harvest/operation_confirmation/: package.xml  setup.cfg  setup.py
lettuce_harvest/operation_confirmation/operation_confirmation/: image_pro_test_node.py  publish_for_arm.py
lettuce_harvest/origin_coordinate_msgs/: CMakeLists.txt  package.xml
lettuce_harvest/set_starting_point/: CMakeLists.txt  package.xml
lettuce_harvest/set_starting_point/src/: set_point_node_improved_ver.cpp  set_starting_point_node.cpp
sample_c_service/: CMakeLists.txt  README.md  package.xml
sample_c_service/src/: c_service_sample.cpp  c_service_test.cpp
xarm_ros2/xarm_api/install/: local_setup.sh  setup.sh
xarm_ros2/xarm_api/install/xarm_api/share/xarm_api/: package.bash  package.zsh
xarm_ros2/xarm_controller/install/: local_setup.sh  setup.sh
xarm_ros2/xarm_controller/install/xarm_controller/share/xarm_controller/: package.bash  package.zsh
